--- a/utils/android-dp-calculator/index.html
+++ b/utils/android-dp-calculator/index.html
@@ -16,15 +16,15 @@
     <table>
       <tr>
         <td><label for="wp">Screen Width (Pixels):</label></td>
-        <td><input type="number" max="10000" min="1" name="wp" value="0" placeholder="0"></td>
+        <td><input type="number" name="wp" min="1" max="10000" value="0"></td>
       </tr>
       <tr>
         <td><label for="hp">Screen Height (Pixels):</label></td>
-        <td><input type="number" max="10000" min="1" name="hp" value="0" placeholder="0"></td>
+        <td><input type="number" name="hp" min="1" max="10000" value="0"></td>
       </tr>
       <tr>
         <td><label for="di">Screen Size (Inches):</label></td>
-        <td><input type="number" max="100" min="1" name="di" value="0" placeholder="0"></td>
+        <td><input type="number" name="di" min="0.1" max="100" step="0.1" value="0"></td>
       </tr>
     </table><br>
 		
