Fix output fromatting

--- a/utils/android-dp-calculator/index.html
+++ b/utils/android-dp-calculator/index.html
@@ -11,7 +11,7 @@
 	  body {-moz-transform: scale(1.4);zoom:140%;padding:0 12px;background-color:#eee;font-family:Calibri}
 	  button{color:#fff;background-color:#275900;width:136px;height:33px;cursor:pointer;border:none;font-size:17px;text-align:center;font-weight:700}
 	  a:link {color: #275900;} a:visited {color: #57007F;} a:hover {color: #FF0000;}
-	</style>
+    </style>
   </head>
 
   <body>
@@ -34,7 +34,7 @@
     </table><br>
 		
     <button type="button" name="button" onclick="calculate()">Calculate</button><br>
-    <span id="output"><p style="font-size:20px">Screen Density is:</p><br><br><br></span>
+    <p id="output" style="font-size:20px">Screen Density is:</p><br><br><br>
     
     <p style="font-size:20px"><u>android-dp-calculator webpage created by <a href="https://github.com/Electric1447/" style="text-color:#275900">Electric1447</a></u></p>
 		
